Fixed spacing and styling weirdness

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ footer section {
     border-bottom: 1px solid black;
     height: 120px;
     width: 110%;
-    margin: 0 10px 0 10px;
+    margin: 0 10px 0 -10px;
     justify-content: space-around;
     display:flex;
 
